Carry inspected NBT as exact data
NBT used to travel as a tree of display text: strings were quoted by
hand without escaping and every value was clipped to 256 characters,
which is what the tree then copied.

A data fact now carries the tag in Minecraft's binary form. Companion
decodes it without Minecraft classes and prints SNBT exactly as
Tag.toString() does, which a test checks against Minecraft over a
corpus of quoting, escaping, key and number cases. A tag over the
transport budget keeps its first entries in printing order and names
each compound or list that lost entries, with /data path syntax.

The generic nested facts and FactTree had no other producer and are
removed; the overview summarises each data fact by shape and size.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>